# SigKit

./: .buildinfo  .gitignore  Cargo.toml  LICENSE  README.md  core.html  datasets.html  genindex.html  index.html  modem.html  objects.inv  py-modindex.html  pyproject.toml  requirements.in  requirements.txt  search.html  searchindex.js
.devcontainer/: dev.env  devcontainer.json  setup.sh
.github/workflows/: docs.yaml  python-publish.yml  test.yaml
_modules/: index.html
_modules/sigkit/core/: base.html  utils.html
_modules/sigkit/datasets/: base.html  procedural.html
_modules/sigkit/impairments/: awgn.html  base.html  frequency_shift.html  phase_shift.html
_modules/sigkit/metrics/: integrity.html  visuals.html
_modules/sigkit/modem/: base.html  fsk.html  psk.html
_modules/sigkit/transforms/: awgn.html  frequency_shift.html  phase_shift.html  utils.html
_sources/: core.rst.txt  modem.rst.txt
_sources/api/: sigkit.core.rst.txt  sigkit.datasets.rst.txt  sigkit.impairments.rst.txt  sigkit.metrics.rst.txt  sigkit.modem.rst.txt  sigkit.transforms.rst.txt
api/: modules.html  sigkit.core.html  sigkit.datasets.html  sigkit.html  sigkit.impairments.html  sigkit.metrics.html  sigkit.modem.html  sigkit.transforms.html
data/checkpoints/: best.ckpt
docs/: conf.py  datasets.rst  gen.sh  index.rst
docs/api/: modules.rst  sigkit.core.rst  sigkit.datasets.rst  sigkit.impairments.rst  sigkit.metrics.rst  sigkit.modem.rst  sigkit.rst  sigkit.transforms.rst
examples/: test_install.py
examples/notebooks/: basic.ipynb  classification.ipynb
scripts/: update_deps.sh
src/sigkit/core/: base.py  utils.py
src/sigkit/datasets/: base.py  procedural.py
src/sigkit/impairments/: awgn.py  base.py  frequency_shift.py
src/sigkit/metrics/: integrity.py  visuals.py
src/sigkit/models/: DataModule.py  Module.py  test.py  train.py  utils.py
src/sigkit/modem/: base.py  fsk.py  psk.py
src/sigkit/transforms/: awgn.py  frequency_shift.py  phase_shift.py  utils.py
tests/unit/: test_awgn.py  test_frequency_shift.py  test_impairments_awgn.py  test_modem_fsk.py  test_modem_psk.py  test_phase_shift.py  test_transforms_awgn.py
