[project]
name = "sigkit"
version = "0.0.1"
description = "Python Signals Toolkit for Pytorch and GNURadio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asttokens==3.0.0",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "executing==2.2.0",
    "filelock==3.18.0",
    "fonttools==4.58.0",
    "fsspec==2025.5.1",
    "icecream==2.1.4",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pillow==11.2.1",
    "pluggy==1.6.0",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "ruff==0.11.11",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "typing-extensions==4.13.2",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "piccolo_theme"
]

[tool.ruff]
target-version = "py311"
exclude = ["docs/", "examples/", "tests/"]

[tool.ruff.lint]
pydocstyle.convention = "google"
select = ["E4", "E7", "E9", "F", "B", "R", "C", "E", "W", "I", "D"]
unfixable = ["B"]
extend-ignore = [
  "D102",  # missing docstring in public method
  "D103",  # missing docstring in public function
  "D104",  # missing docstring in public package
  "D105",  # missing docstring in magic method
  "D106",  # missing docstring in public nested function
  "D107",  # missing docstring in __init__
]

# [tool.ruff.lint.per-file-ignores]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sigkit"]
